--- a/dev/css/main.css
+++ b/dev/css/main.css
@@ -335,40 +335,40 @@ html *::-webkit-scrollbar-thumb {
 
 @font-face {
   font-family: 'PT Root UI';
-  src: url("/fonts/PTRootUI-Bold.eot");
-  src: url("/fonts/PTRootUI-Bold.eot?#iefix") format("embedded-opentype"), url("/fonts/PTRootUI-Bold.woff2") format("woff2"), url("/fonts/PTRootUI-Bold.woff") format("woff"), url("/fonts/PTRootUI-Bold.ttf") format("truetype"), url("/fonts/PTRootUI-Bold.svg#PTRootUI-Bold") format("svg");
+  src: url("../fonts/PTRootUI-Bold.eot");
+  src: url("../fonts/PTRootUI-Bold.eot?#iefix") format("embedded-opentype"), url("../fonts/PTRootUI-Bold.woff2") format("woff2"), url("../fonts/PTRootUI-Bold.woff") format("woff"), url("../fonts/PTRootUI-Bold.ttf") format("truetype"), url("../fonts/PTRootUI-Bold.svg#PTRootUI-Bold") format("svg");
   font-weight: bold;
   font-style: normal;
   font-display: swap; }
 
 @font-face {
   font-family: 'PT Root UI';
-  src: url("/fonts/PTRootUI-Medium.eot");
-  src: url("/fonts/PTRootUI-Medium.eot?#iefix") format("embedded-opentype"), url("/fonts/PTRootUI-Medium.woff2") format("woff2"), url("/fonts/PTRootUI-Medium.woff") format("woff"), url("/fonts/PTRootUI-Medium.ttf") format("truetype"), url("/fonts/PTRootUI-Medium.svg#PTRootUI-Medium") format("svg");
+  src: url("../fonts/PTRootUI-Medium.eot");
+  src: url("../fonts/PTRootUI-Medium.eot?#iefix") format("embedded-opentype"), url("../fonts/PTRootUI-Medium.woff2") format("woff2"), url("../fonts/PTRootUI-Medium.woff") format("woff"), url("../fonts/PTRootUI-Medium.ttf") format("truetype"), url("../fonts/PTRootUI-Medium.svg#PTRootUI-Medium") format("svg");
   font-weight: 500;
   font-style: normal;
   font-display: swap; }
 
 @font-face {
   font-family: 'PT Root UI';
-  src: url("/fonts/PTRootUI-Regular.eot");
-  src: url("/fonts/PTRootUI-Regular.eot?#iefix") format("embedded-opentype"), url("/fonts/PTRootUI-Regular.woff2") format("woff2"), url("/fonts/PTRootUI-Regular.woff") format("woff"), url("/fonts/PTRootUI-Regular.ttf") format("truetype"), url("/fonts/PTRootUI-Regular.svg#PTRootUI-Regular") format("svg");
+  src: url("../fonts/PTRootUI-Regular.eot");
+  src: url("../fonts/PTRootUI-Regular.eot?#iefix") format("embedded-opentype"), url("../fonts/PTRootUI-Regular.woff2") format("woff2"), url("../fonts/PTRootUI-Regular.woff") format("woff"), url("../fonts/PTRootUI-Regular.ttf") format("truetype"), url("../fonts/PTRootUI-Regular.svg#PTRootUI-Regular") format("svg");
   font-weight: normal;
   font-style: normal;
   font-display: swap; }
 
 @font-face {
   font-family: 'Jura';
-  src: url("/fonts/Jura-Light.eot");
-  src: url("/fonts/Jura-Light.eot?#iefix") format("embedded-opentype"), url("/fonts/Jura-Light.woff2") format("woff2"), url("/fonts/Jura-Light.woff") format("woff"), url("/fonts/Jura-Light.ttf") format("truetype"), url("/fonts/Jura-Light.svg#Jura-Light") format("svg");
+  src: url("../fonts/Jura-Light.eot");
+  src: url("../fonts/Jura-Light.eot?#iefix") format("embedded-opentype"), url("../fonts/Jura-Light.woff2") format("woff2"), url("../fonts/Jura-Light.woff") format("woff"), url("../fonts/Jura-Light.ttf") format("truetype"), url("../fonts/Jura-Light.svg#Jura-Light") format("svg");
   font-weight: 300;
   font-style: normal;
   font-display: swap; }
 
 @font-face {
   font-family: 'PT Root UI';
-  src: url("/fonts/PTRootUI-Light.eot");
-  src: url("/fonts/PTRootUI-Light.eot?#iefix") format("embedded-opentype"), url("/fonts/PTRootUI-Light.woff2") format("woff2"), url("/fonts/PTRootUI-Light.woff") format("woff"), url("/fonts/PTRootUI-Light.ttf") format("truetype"), url("/fonts/PTRootUI-Light.svg#PTRootUI-Light") format("svg");
+  src: url("../fonts/PTRootUI-Light.eot");
+  src: url("../fonts/PTRootUI-Light.eot?#iefix") format("embedded-opentype"), url("../fonts/PTRootUI-Light.woff2") format("woff2"), url("../fonts/PTRootUI-Light.woff") format("woff"), url("../fonts/PTRootUI-Light.ttf") format("truetype"), url("../fonts/PTRootUI-Light.svg#PTRootUI-Light") format("svg");
   font-weight: 300;
   font-style: normal;
   font-display: swap; }
@@ -518,7 +518,7 @@ input:-moz-placeholder {
         .popup__check .custom-checkbox + label a:hover, .popup2__check .custom-checkbox + label a:hover, .popup3__check .custom-checkbox + label a:hover, .popup4__check .custom-checkbox + label a:hover, .popup5__check .custom-checkbox + label a:hover, .popup6__check .custom-checkbox + label a:hover, .popup7__check .custom-checkbox + label a:hover, .popup8__check .custom-checkbox + label a:hover, .popup9__check .custom-checkbox + label a:hover {
           color: #000; }
     .popup__check .custom-checkbox:checked + label::before, .popup2__check .custom-checkbox:checked + label::before, .popup3__check .custom-checkbox:checked + label::before, .popup4__check .custom-checkbox:checked + label::before, .popup5__check .custom-checkbox:checked + label::before, .popup6__check .custom-checkbox:checked + label::before, .popup7__check .custom-checkbox:checked + label::before, .popup8__check .custom-checkbox:checked + label::before, .popup9__check .custom-checkbox:checked + label::before {
-      background: url(/img/check.png) no-repeat center center;
+      background: url(../img/check.png) no-repeat center center;
       background-color: #b3a377;
       border: 1px solid #b3a377; }
   .popup__btn, .popup2__btn, .popup3__btn, .popup4__btn, .popup5__btn, .popup6__btn, .popup7__btn, .popup8__btn, .popup9__btn {
@@ -770,10 +770,10 @@ input:-moz-placeholder {
   display: inline-block;
   width: 18px;
   height: 10px;
-  background: url(/img/eye.png) 0 0 no-repeat; }
+  background: url(../img/eye.png) 0 0 no-repeat; }
 
 .password-control.view, .password-control2.view, .password-control3.view, .password-control4.view {
-  background: url(/img/eye.png) 0 0 no-repeat; }
+  background: url(../img/eye.png) 0 0 no-repeat; }
 
 .custom-checkbox {
   position: absolute;
@@ -813,7 +813,7 @@ input:-moz-placeholder {
   margin-right: 11px; }
 
 .custom-checkbox:checked + label::before {
-  background: url(/img/check.png) no-repeat center center;
+  background: url(../img/check.png) no-repeat center center;
   background-size: 8px; }
 
 .checkbox p {
@@ -1078,7 +1078,7 @@ input:-moz-placeholder {
       border-radius: 10px;
       position: relative; }
       .item .swiper2 .swiper-slide_1 {
-        background: url(/img/i1.png) no-repeat center center/cover;
+        background: url(../img/i1.png) no-repeat center center/cover;
         padding: 56px 39px; }
         .item .swiper2 .swiper-slide_1 .item__bg {
           position: absolute;
@@ -1109,7 +1109,7 @@ input:-moz-placeholder {
           font-size: 12px;
           margin-left: 7px; }
       .item .swiper2 .swiper-slide_2 {
-        background: url(/img/i2.png) no-repeat center center/cover;
+        background: url(../img/i2.png) no-repeat center center/cover;
         padding: 9px 61px; }
         .item .swiper2 .swiper-slide_2 .item__title {
           font-family: 'Formular';
@@ -1139,7 +1139,7 @@ input:-moz-placeholder {
           line-height: 100%;
           margin-top: 10px; }
       .item .swiper2 .swiper-slide_3 {
-        background: url(/img/i3.png) no-repeat center center/cover;
+        background: url(../img/i3.png) no-repeat center center/cover;
         padding: 59px 140px;
         text-align: center; }
         .item .swiper2 .swiper-slide_3 .item__title {
@@ -1984,7 +1984,7 @@ input:-moz-placeholder {
       display: block;
       width: 73px;
       height: 73px;
-      background: url(/img/loop.png) no-repeat;
+      background: url(../img/loop.png) no-repeat;
       position: absolute;
       top: 50%;
       left: 50%;
@@ -2090,7 +2090,7 @@ input:-moz-placeholder {
         margin-top: -13.5px;
         margin-left: -13.5px;
         top: 50%;
-        background: url(/img/pp3.png) no-repeat;
+        background: url(../img/pp3.png) no-repeat;
         transition: 0.5s;
         pointer-events: none;
         opacity: 0;
@@ -2398,12 +2398,12 @@ input[type=range]::-webkit-slider-thumb {
   pointer-events: all;
   width: 14px;
   height: 16px;
-  background: url(/img/range.png) no-repeat center 0px;
+  background: url(../img/range.png) no-repeat center 0px;
   cursor: pointer;
   border: none; }
 
 input[type=range]:nth-child(2)::-webkit-slider-thumb {
-  background: url(/img/range.png) no-repeat center 0px !important;
+  background: url(../img/range.png) no-repeat center 0px !important;
   position: relative;
   top: -1.6px; }
 
@@ -2412,7 +2412,7 @@ input[type=range]::-moz-range-thumb {
   pointer-events: all;
   width: 14px;
   height: 16px;
-  background: url(/img/range.png) no-repeat center 0px;
+  background: url(../img/range.png) no-repeat center 0px;
   cursor: pointer; }
 
 input[type=number]::-webkit-inner-spin-button,
@@ -2503,7 +2503,7 @@ input[type="range"] {
   height: 5px;
   text-align: center;
   vertical-align: top;
-  background: url(/img/down-arrow.png) no-repeat !important;
+  background: url(../img/down-arrow.png) no-repeat !important;
   position: absolute;
   right: -16px;
   top: 8px; }
@@ -2689,7 +2689,7 @@ ul.info li {
   content: "";
   position: absolute;
   right: 0px;
-  background: url(/img/down-arrow.png) no-repeat !important;
+  background: url(../img/down-arrow.png) no-repeat !important;
   width: 7px;
   left: inherit;
   height: 5px;
@@ -2702,7 +2702,7 @@ ul.info li {
   content: "";
   position: absolute;
   right: 0px;
-  background: url(/img/down-arrow.png) no-repeat !important;
+  background: url(../img/down-arrow.png) no-repeat !important;
   width: 7px;
   left: inherit;
   height: 5px;
@@ -2753,7 +2753,7 @@ ul.info li {
   z-index: 1;
   margin-right: 32px;
   cursor: pointer;
-  background: url(/img/search.png); }
+  background: url(../img/search.png); }
 
 .menu2, .menu22 {
   position: fixed;
@@ -2803,7 +2803,7 @@ ul.info li {
   overflow: visible;
   position: fixed;
   right: 30px;
-  background: url(/img/close2.png);
+  background: url(../img/close2.png);
   width: 24px;
   height: 24px;
   top: 30px;
@@ -3318,7 +3318,7 @@ ul.info li {
       display: inline-flex;
       width: 14px;
       height: 17px;
-      background: url(/img/up.png) no-repeat;
+      background: url(../img/up.png) no-repeat;
       margin: 0 12px 0 22px; }
   .rate__item.down {
     background: white; }
@@ -3327,7 +3327,7 @@ ul.info li {
       display: inline-flex;
       width: 14px;
       height: 17px;
-      background: url(/img/down.png) no-repeat;
+      background: url(../img/down.png) no-repeat;
       margin: 0 12px 0 22px; }
 
 .rate__number {
